--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,11 +7,18 @@ environment:
   sdk: '>=3.3.0 <4.0.0'
 
 dependencies:
+  bloc: ^8.1.3
   flutter:
     sdk: flutter
+  flutter_bloc: ^8.1.4
   flutter_hooks: ^0.20.5
+  fluttertoast: ^8.2.4
+  freezed: ^2.4.7
+  freezed_annotation: ^2.4.1
+  get_it: ^7.6.7
 
 dev_dependencies:
+  build_runner: ^2.4.8
   flutter_lints: ^3.0.0
   flutter_test:
     sdk: flutter
