--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,8 @@ dependencies:
   freezed: ^2.4.7
   freezed_annotation: ^2.4.1
   get_it: ^7.6.7
+  json_annotation: ^4.8.1
+  json_serializable: ^6.7.1
 
 dev_dependencies:
   build_runner: ^2.4.8
