--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,8 @@ environment:
 
 dependencies:
   bloc: ^8.1.3
+  cloud_firestore: ^4.15.7
+  firebase_core: ^2.26.0
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.4
@@ -16,6 +18,7 @@ dependencies:
   freezed: ^2.4.7
   freezed_annotation: ^2.4.1
   get_it: ^7.6.7
+  intl: ^0.19.0
   json_annotation: ^4.8.1
   json_serializable: ^6.7.1
 
