--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,14 +1,15 @@
 name: crud_flutter
 description: "A new Flutter project."
-publish_to: 'none'
+publish_to: "none"
 version: 0.1.0
 
 environment:
-  sdk: '>=3.3.0 <4.0.0'
+  sdk: ">=3.3.0 <4.0.0"
 
 dependencies:
   bloc: ^8.1.3
   cloud_firestore: ^4.15.7
+  firebase_ui_firestore: ^1.6.2
   firebase_core: ^2.26.0
   flutter:
     sdk: flutter
@@ -18,7 +19,8 @@ dependencies:
   freezed: ^2.4.7
   freezed_annotation: ^2.4.1
   get_it: ^7.6.7
-  intl: ^0.19.0
+  intl: 0.18.1
+  flutter_slidable: ^3.0.1
   json_annotation: ^4.8.1
   json_serializable: ^6.7.1
 
