--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,24 +7,26 @@ environment:
   sdk: ">=3.3.0 <4.0.0"
 
 dependencies:
+  auto_route: ^7.8.4
   bloc: ^8.1.3
   cloud_firestore: ^4.15.7
-  firebase_ui_firestore: ^1.6.2
   firebase_core: ^2.26.0
+  firebase_ui_firestore: ^1.6.2
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.4
   flutter_hooks: ^0.20.5
+  flutter_slidable: ^3.0.1
   fluttertoast: ^8.2.4
   freezed: ^2.4.7
   freezed_annotation: ^2.4.1
   get_it: ^7.6.7
   intl: 0.18.1
-  flutter_slidable: ^3.0.1
   json_annotation: ^4.8.1
   json_serializable: ^6.7.1
 
 dev_dependencies:
+  auto_route_generator: 7.3.2
   build_runner: ^2.4.8
   flutter_lints: ^3.0.0
   flutter_test:
